objects/Order_PS_Charges__c.object
<CustomObject>
    <fields>
        <fullName>Account_Date__c</fullName>
        <label>Account Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Product_ID__c</fullName>
        <description>What it does?The salesforce ID of the Opportunity Product item to which this Order PS Charge item relates. This is just the ID and not a lookup and will be used with the integration to RevPro to identify to which SO line this Order PS Charge is associated.
Owner? Professional Services / Finance</description>
        <inlineHelpText>The ID of the Opportunity Product item to which this Order PS Charge Item relates, and used for association of this to the RevPro SO Lines</inlineHelpText>
        <label>Associated Opportunity Product ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_ID__c</fullName>
        <label>Category ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Id__c</fullName>
        <label>Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type_ID__c</fullName>
        <label>Charge Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_PO__c</fullName>
        <label>Client PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOM__c</fullName>
        <label>EOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <label>Invoice ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_PS_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order PS Charge</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order PS Charges</relationshipLabel>
        <relationshipName>Order_PS_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_id__c</fullName>
        <label>Product id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type_id__c</fullName>
        <label>Task Type id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_Name__c</fullName>
        <label>product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order PS Charges</label>
    <nameField>
        <label>Order PS Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order PS Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>